add endpoints /fires/data and /warnings/site
